--- a/App/public/index.html
+++ b/App/public/index.html
@@ -5,9 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <meta name="description" content="Author: FP, Category: Inventory_app" >
-    <link rel="icon" href="ico.ico">
+    <link rel="icon" href="icons/ico.ico">
     <link rel="manifest" href="manifest.json" >
     <title><%= htmlWebpackPlugin.options.title %></title>
+
+    <script>
+      window.addEventListener('load', () => {
+        if("serviceWorker" in navigator){
+          navigator.serviceWorker.register('/sw.js')
+        }
+      })
+    </script>
+
   </head>
   <body>
     <noscript>
