--- a/App/public/index.html
+++ b/App/public/index.html
@@ -9,13 +9,13 @@
     <link rel="manifest" href="manifest.json" >
     <title>E_Stock</title>
 
-    <!-- <script>
+    <script>
       window.addEventListener('load', () => {
         if("serviceWorker" in navigator){
           navigator.serviceWorker.register('/sw.js')
         }
       })
-    </script> -->
+    </script>
 
   </head>
   <body>
