--- a/App/public/index.html
+++ b/App/public/index.html
@@ -23,13 +23,13 @@
     <base href="/">
     <title>E_Stock</title>
 
-    <script>
+    <!-- <script>
       window.addEventListener('load', () => {
         if("serviceWorker" in navigator){
           navigator.serviceWorker.register('/sw.js')
         }
       })
-    </script>
+    </script> -->
 
   </head>
   <body>
